--- a/app/src/main/res/layout/data_item.xml
+++ b/app/src/main/res/layout/data_item.xml
@@ -20,50 +20,65 @@
 
     <LinearLayout
         android:id="@+id/dataItemRow"
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:gravity="left|center_vertical"
-        android:layout_toEndOf="@id/dataItemArrow"
-        android:layout_toStartOf="@id/dataItemValue"
         android:layout_marginLeft="@dimen/offset_default"
-        android:layout_marginRight="@dimen/offset_default">
+        android:layout_marginRight="@dimen/offset_default"
+        android:layout_toStartOf="@id/dataItemAction"
+        android:layout_toEndOf="@id/dataItemArrow"
+        android:gravity="left|center_vertical"
+        android:orientation="vertical">
+
         <TextView
-            android:singleLine="true"
             android:id="@+id/dataItemName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/font_default"
-            android:textColor="@android:color/black" />
+            android:singleLine="true"
+            android:textColor="@android:color/black"
+            android:text="Example Category"
+            android:textSize="@dimen/font_default" />
 
         <TextView
-            android:singleLine="true"
             android:id="@+id/dataItemInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/font_small"
-            android:textColor="@android:color/black" />
+            android:singleLine="true"
+            android:text="some detail info on category"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/font_small" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/dataItemValue"
-        android:layout_width="110dp"
-        android:layout_height="45dp"
-        android:layout_alignEnd="@id/dataItemSelect"
-        android:layout_marginEnd="21dp"
-        android:layout_toStartOf="@id/dataItemSelect"
-        android:singleLine="true"
-        android:gravity="right|center_vertical"
-        android:text="€ 12.345.67,00"
-        android:textSize="@dimen/font_default" />
-
-    <ImageView
-        android:id="@+id/dataItemSelect"
+    <LinearLayout
+        android:id="@+id/dataItemAction"
+        android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_alignParentEnd="true"
-        android:src="@drawable/arrow_left"/>
+        android:gravity="left|center_vertical"
+        >
+
+        <TextView
+            android:id="@+id/dataItemValue"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:gravity="right|center_vertical"
+            android:singleLine="true"
+            android:text="€ 12.345.67,00"
+            android:textSize="@dimen/font_default"
+            android:visibility="visible" />
+        <!--            android:layout_alignEnd="@id/dataItemSelect"  -->
+        <!--            android:layout_toStartOf="@id/dataItemSelect"  -->
+
+        <ImageView
+            android:id="@+id/dataItemSelect"
+            android:layout_width="25dp"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:src="@drawable/arrow_left"
+            android:visibility="visible" />
+
+    </LinearLayout>
 
 </RelativeLayout>
